# non-root-android-iot

./: Cargo.toml  README.md  commands.txt
src/: adb.rs  device_sensor.rs  flash.rs  log_data.rs  main.rs  scripts.rs  state.rs  tailscale.rs  util.rs  web_endpoint.rs
src/scripts/: backup_loop.sh  ding.sh  do_something.sh  log_acc.sh  log_audio.sh  log_battery.sh  log_bluetooth.sh  log_cell.sh  log_cpu.sh  log_data_usage.sh  log_dns.sh  log_elevation.sh  log_gps.sh  log_gravity.sh  log_gyro.sh  log_http.sh  log_humidity.sh  log_light.sh  log_linear_acc.sh  log_magnetic.sh  log_memory.sh  log_ntp.sh  log_ping.sh  log_pressure.sh  log_processes.sh  log_proximity.sh  log_public_ip.sh  log_rotation.sh  log_screen.sh  log_sensor.sh  log_serial_usb_interface.sh  log_steps.sh  log_storage.sh  log_volume.sh  log_vpn.sh  log_wifi.sh  loop.sh  take_photo.sh
src/scripts/condition/: detect_camera_motion.sh
src/scripts/upload_scripts/: upload_pocketbase.sh  upload_sms.sh  upload_taildrop.sh
