[package]
name = "non-root-android-iot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dirs = "6.0.0"
egui-macroquad = "0.17.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
macroquad = "0.4.15"
open = "5.3.5"
ping = "0.7.1"
rfd = "0.17.2"
savefile = "0.20.2"
serde_json = "1.0.150"
ureq = "3.3.0"
